Fixed some layout issues.
git-svn-id: https://svn.apache.org/repos/asf/incubator/jspwiki/trunk@624866 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/webdocs/templates/default/jspwiki.css
+++ b/src/webdocs/templates/default/jspwiki.css
@@ -1,7 +1,7 @@
 /* Set the master look here */
 body { font-family: arial, helvetica, sans-serif; 
        font-size: 0.9em;
-       behavior:url(scripts/csshover.htc); }
+     }
 *    { margin:0; padding: 0; }
        
 /* Use as div 'block enclosure' to clear floats properly. This works across browsers
